components/About/About.module.css
#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  height: 100vh;
}

.about-content {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  text-align: center;
  max-width: 60rem;
  padding: 0 20px;
}

.about-paragraph {
  padding: 0 40px;
}

.cta {
  margin-top: 60px;
}

.cta-icon {
  margin-left: 10px;
}

@media screen and (max-width: 768px) {
  .about-content {
    flex-direction: column;
  }
  .about-paragraph {
    padding: 0;
    margin-top: 20px;
  }
}

